# homepage-api

./: .gitignore  Cargo.toml  README.md  TODO.md  docker-compose.yml
docs/: api.svenvowe.de.postman_collection.json  homepage-api.postman_collection.json
migrations/2021-01-18-220005_create_lists/: up.sql
migrations/2021-01-19-214417_create_lists/: down.sql  up.sql
migrations/2021-01-23-180725_create_items/: up.sql
migrations/2021-02-23-144638_create_users/: up.sql
src/: api.rs  data_access.rs  db.rs  errors.rs  localstore.rs  main.rs  models.rs  routes.rs  schema.rs  webauthn.rs
src/webauthn/: actors.rs  api.rs  routes.rs
