[package]
name = "homepage-api"
version = "0.1.0"
authors = ["Sven Vowe <svenvowe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.10.0"
warp = "0.2"
