[package]
name = "retrolist"
version = "0.1.0"
authors = ["Sven Vowe <svenvowe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

serde = "1.0"
serde_derive = "1.0"

diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }

dotenv = "0.15.0"

log = "0.4.13"
pretty_env_logger = "0.4.0"
