[package]
name = "retrolist"
version = "0.1.0"
authors = ["Sven Vowe <svenvowe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
# json
serde = "1.0"
serde_derive = "1.0"
# db
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
# .env
dotenv = "0.15.0"
# logging
log = "0.4.13"
pretty_env_logger = "0.4.0"
# webauthn
webauthn-rs = "0.3.0-alpha.5"
async-std = { version = "1.6", features = ["attributes"] }
lru = "0.6"
